虛擬市集介面 - 調整popup顯示位置問題

--- a/iiot/TTPUSH_market/css/style.css
+++ b/iiot/TTPUSH_market/css/style.css
@@ -354,6 +354,18 @@ body {
           box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.1) 10px 10px 6px;
 }
 
+.white-popup::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  border-radius: 25px 25px 0 0;
+  background: url(../images/bg-w2.png) left top repeat-x;
+  height: 40px;
+  z-index: 1;
+}
+
 .mfp-fade .mfp-bg {
   opacity: 0;
   -webkit-transition: all 0.15s ease-out;
@@ -383,13 +395,16 @@ body {
 }
 
 .popup-container {
+  position: relative;
   width: 100%;
-  padding: 35px;
+  padding: 35px 35px 0px 35px;
+  max-height: 80vh;
+  overflow-y: scroll;
 }
 
 .popup-container .store-photo {
   position: relative;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
 }
 
 .popup-container .store-photo img {
@@ -436,7 +451,7 @@ body {
 
 .popup-container .done-title {
   width: 100%;
-  padding: 30px 0 20px 0;
+  padding: 30px 0;
   text-align: center;
 }
 
@@ -480,6 +495,14 @@ body {
 }
 
 .popup-container .bottom-btn {
+  width: 100%;
+  padding-top: 30px;
+  height: 90px;
+  background: url(../images/bg-w.png) center top repeat-x;
+  position: -webkit-sticky;
+  position: sticky;
+  left: 0;
+  bottom: 0;
   text-align: center;
 }
 
@@ -505,7 +528,7 @@ body {
 
 @media all and (max-width: 600px) {
   .popup-container {
-    padding: 30px 25px 25px 25px;
+    padding: 30px 25px 0px 25px;
   }
   .popup-container .info p {
     font-size: 14px;
