--- a/iiot/TTPUSH_market/css/style.scss
+++ b/iiot/TTPUSH_market/css/style.scss
@@ -13,6 +13,7 @@
   .event-content-top{
     width: 100%;
     position: relative;
+    overflow-y: hidden;
     img{
       width: 100%;
     }
@@ -23,6 +24,22 @@
     }
     .an-repeat{
       animation-iteration-count: infinite;
+    }
+    .user-photos{
+      position: relative;
+      .img-user{
+        position: absolute;
+        border-radius: 50%;
+        display: block;
+        background: #fbf0f3;
+        border:2px solid #fff;
+        box-shadow: rgba(rgba(0, 0, 0, 0.2), 0.16) 0px 3px 6px,
+        rgba(rgba(0, 0, 0, 0.2), 0.1) 10px 10px 6px;
+        z-index: 2;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
     }
     a{
       div{
