--- a/iiot/TTPUSH_market/css/style.scss
+++ b/iiot/TTPUSH_market/css/style.scss
@@ -46,9 +46,10 @@
         position: relative;
         .over{
           position: absolute;
-          top: 0;
-          left: 0;
+          top: -10px;
+          right: -10px;
           z-index: 2;
+          width: 55%;
         }
       }
       position: absolute;
