--- a/ttpush_ui/css.less
+++ b/ttpush_ui/css.less
@@ -360,12 +360,28 @@ body    { margin: 0; }
         .separate { margin: 0; }
     }
 
+    #main.ipassGet{
+        > * { margin-bottom: 20px; }
+        .flexV{ position: relative; padding-top: 48px;
+            &::after{ position: absolute; content: ""; top: 0; left: calc(50% - 20px); width: 40px; height: 40px; display: block; background: url(icon/bg-w-store.svg) center center no-repeat; background-size: cover; }
+            span{ font-size: 14px; color: #333F48;}}
+        .Note{ padding: 0 13px;
+            span{ color: #333; font-weight: bold;}
+            ul{ list-style-type: decimal; padding-inline-start:20px;
+                    li{ color: #828282; font-size: 14px; line-height:20px;
+                    a{ color: #EF6079; text-decoration: underline !important;
+                        &:hover{ text-decoration: none;}}}}}
+        .card { width: calc(100% - 10px); height: 230px; margin-top: 15px; max-width: 384px; border-radius: 20px; overflow: hidden; position: relative; background-color: white; box-shadow: 0px 5px 10px rgba(55, 84, 170, 0.2); background: url(img/card-ipass.png); background-size: contain; background-repeat: no-repeat; background-color: #fff; background-position:  center center;
+            .bg-dark { width: 100%; height: 100%; display: block; background-color: #00000076; display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;
+                p{ font-size: 22px; color: #fff; transform-origin: 50% 0%; transform: rotateZ(-15deg);}}}} 
+         
     // Color
     .primary    { color: @c1; }
     .gray       { color: @cG3; }
     .disabled   { color: @cG4; filter: grayscale(100%); pointer-events: none; }
     .error      { color: @cRed; }
     .background { background-color: @cBg; }
+    .grayscale  { filter: grayscale(100%); -webkit-filter: grayscale(1);}
 
     // Font
     .fXL    { font-size: 36px; }
